# craip_2025f_g4

./: .gitignore  README.md
docker/: compose.yaml  compose_build.bash
docker/DockerFiles/: Dockerfile
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: LanguageCommand.srv
src/environment/: CMakeLists.txt
src/environment/fuel_models/box/: model.sdf
src/environment/worlds/: hospital.world  simple_room.world
src/go1_simulation/: memo.txt
src/go1_simulation/maps/: my_world.pgm  my_world.yaml
src/language_command_handler/: CMakeLists.txt  how_to_use.txt  package.xml  requirements.txt
src/language_command_handler/config/: command_handler_config.yaml
src/language_command_handler/language_command_handler/: __init__.py  go_back.py  go_front.py  language_command_handler.py  stop.py
src/language_command_handler/launch/: go_back.launch.py  start_command_handler.launch.py
src/localization/: CMakeLists.txt  package.xml
src/localization/launch/: global_localizer.launch.py  localization.launch.py  odom_localizer.launch.py
src/localization/localization/: global_localizer_node.py  odom_localizer_node.py  utils.py
src/localization/scripts/: record_trajectory.py
src/path_tracker/config/: mppi.yaml
src/perception/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/perception/launch/: data_collection.launch.py  perception.launch.py
src/perception/perception/: __init__.py  data_collector.py  distance_estimator.py  perception_node.py  yolo_detector.py
src/perception/perception/utils/: center_detector.py  visualization.py
